# SlaskSpy

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: com_ports.h  input_items.h  inputviewer.h  mainwindow.h  viewerwindow.h
include/common/: com_ports.h  graphics_wrapper.h  input_items.h  input_viewer.h  logger.h  skin_settings.h  viewer.h
include/common/viewers/: gamecube_viewer.h  n64_viewer.h
include/qt/: mainwindow.h  qt_graphics_wrapper.h  qt_input_items.h  viewerwindow.h  window_manager.h
obs-plugin/: .cmake-format.json  CMakeLists.txt  CMakePresets.json
obs-plugin/src/: SlaskSpy.cpp  SlaskSpy.hpp  obs_graphics_wrapper.cpp  obs_graphics_wrapper.h  obs_logger.h  plugin-main.cpp
src/: com_ports.cpp  input_items.cpp  inputviewer.cpp  mainwindow.cpp  mainwindow.ui  viewerwindow.cpp  viewerwindow.ui  window_manager.cpp
src/common/: com_ports.cpp  input_viewer.cpp  skin_settings.cpp  viewer.cpp
src/common/viewers/: n64_viewer.cpp
src/qt/: main.cpp  mainwindow.cpp  qt_graphics_wrapper.cpp  qt_input_items.cpp  viewerwindow.cpp  window_manager.cpp
viewers/: viewer.h
viewers/n64/: n64_viewer.cpp  n64_viewer.h
